# TimeScheduler

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: Dockerfile  alembic.ini  pyproject.toml  seed_test_data.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_task_color.py  002_add_users_and_user_id.py  003_add_repeat_days.py  004_add_boards_and_task_board_id.py  005_add_telegram.py  006_add_is_archived.py  007_add_deadline.py  007_add_notes_and_budget.py  009_add_budget_features.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  board.py  budget.py  habit.py  habit_log.py  note.py  task.py  telegram.py  user.py
backend/app/routers/: admin.py  auth.py  backup.py  boards.py  budget.py  export.py  habits.py  notes.py  stats.py  tags.py  tasks.py  telegram.py
backend/app/schemas/: admin.py  auth.py  board.py  budget.py  habit.py  note.py  stats.py  task.py
backend/app/services/: auth.py  backup.py  stats.py  telegram_bot.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/public/: manifest.json
frontend/src/: App.tsx
frontend/src/api/: admin.ts  boards.ts  budget.ts  export.ts  habits.ts  notes.ts  stats.ts  tasks.ts  telegram.ts
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useBudget.ts  useHabits.ts  useNotes.ts  useStats.ts  useTasks.ts
frontend/src/pages/: AdminPage.tsx  BoardsPage.tsx  BudgetPage.tsx  CalendarPage.tsx  ExportPage.tsx  (+6 more)
(+25 files in other folders)
